<resources>
    <string name="app_name">Workey</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_agenda">Agenda</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="priority">Priority</string>
    <string name="duration">Duration</string>
    <string name="deadline">Deadline</string>
    <string name="select">Select</string>
    <string name="no_tasks">You don\'t have any tasks.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="incorrect_date">Incorrect headerDate</string>
    <string name="enter_task_name">Enter task name!</string>
    <string name="undo">Undo</string>
    <string name="task_removed">The task was removed.</string>
    <string name="wrong_hour">Hour has to be greater than the first one.</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="midnight">00:00</string>
    <string name="from">From</string>
    <string name="day_of_week">Day of week</string>
    <string name="to">To</string>
    <string name="insert_duration_and_deadline">Insert duration and deadline first.</string>
    <string name="not_enough_time">There is not enough time for this task.</string>
    <string name="enough_time">Enough time for this task</string>
    <string name="time_null">Duration can not be zero.</string>
</resources>
